objects/Voya__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Release_name__c</fullName>
        <label>Release name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Voya</label>
    <nameField>
        <label>Voya Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voyas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>